[package]
edition = "2018"

name = "project-cleanup"
version = "0.5.3"

description = "CLI tool to clean up and remove old generated code in your Rust, Javascript and Java projects"
repository = "https://github.com/woubuc/project-cleanup"
authors = ["Wouter Buckens <wouter@epicteddy.com> (www.woubuc.be)"]

readme = "README.md"
license = "MIT"

keywords = ["cleanup", "project", "clean", "delete", "free"]
categories = ["command-line-utilities"]

[dependencies]
crossbeam = "0.7.1"
crossterm = { version="0.9.6", default-features = false, features = ["terminal", "style"] }
dunce = "1.0.0"
humansize = "1.1.0"
lazy_static = "1.3.0"
num_cpus = "1.10.1"
regex = "1.1.6"
structopt = "0.2.16"
