[package]
edition = "2018"
name = "swp"
version = "1.0.3"

description = "CLI tool to clean up and remove old generated code in your Rust, Javascript and Java projects"
repository = "https://github.com/woubuc/sweep"
authors = ["Wouter Buckens <wouter@epicteddy.com> (www.woubuc.be)"]

readme = "README.md"
license = "MIT"

keywords = ["cleanup", "sweep", "clean", "delete", "free"]
categories = ["command-line-utilities"]

include = ["src/**/*"]

[dependencies]
crossbeam = "0.7.3"
dunce = "1.0.0"
num_cpus = "1.11.1"
regex = "1.3.1"
structopt = "0.3.5"
term_size = "0.3.1"
yansi = "0.5.0"

[dev-dependencies]
tempdir = "0.3.7"
